--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^2.7.16",
     "vue-router": "^3.5.1",
+    "vue-sweetalert2": "^5.0.11",
     "vuetify": "^2.7.2",
     "vuex": "^3.6.2"
   },
