--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^2.7.16",
+    "vue-gtag": "^1.16.1",
     "vue-router": "^3.5.1",
     "vue-sweetalert2": "^5.0.11",
     "vuetify": "^2.7.2",
