--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "html2canvas": "^1.4.1",
     "vue": "^2.7.16",
     "vue-gtag": "^1.16.1",
     "vue-router": "^3.5.1",
