--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "html2canvas": "^1.4.1",
     "vue": "^2.7.16",
+    "vue-apexcharts": "^1.7.0",
     "vue-gtag": "^1.16.1",
     "vue-router": "^3.5.1",
     "vue-sweetalert2": "^5.0.11",
